# zk-utils

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.docker.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.claude/commands/: test.md
.github/workflows/: ci.yaml
docs/: test.md
src/zk_utils/_base_models/: __init__.py
src/zk_utils/application/_abc/: __init__.py
src/zk_utils/application/_common/: note.py  pagination.py  tag.py
src/zk_utils/application/notes/: __init__.py  if_note_query_service.py
src/zk_utils/application/tags/: __init__.py  if_tag_query_service.py
src/zk_utils/infrastructure/zk/: zk_client.py
src/zk_utils/presentation/: settings.py
src/zk_utils/presentation/injector/: __init__.py  note_module.py  tag_module.py  zk_module.py
src/zk_utils/presentation/mcp/: server.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/application/notes/: test_create_note_integration.py  test_get_last_modified_note_integration.py  test_get_link_to_notes_integration.py  test_get_note_content_integration.py  test_get_notes_integration.py  test_get_random_note_integration.py  test_get_tagless_notes_integration.py
tests/integration/application/tags/: test_get_tags_integration.py
tests/integration/presentation/injector/: test_injector_integration.py
tests/integration/presentation/mcp/: __init__.py  test_get_tagless_notes_mcp.py
tests/unit/application/_common/: test_pagination.py
tests/unit/application/notes/: __init__.py
(+42 files in other folders)
